# eurocore

./: Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
migrations/: 20240625201730_add_dispatch_table.down.sql  20240625201730_add_dispatch_table.up.sql  20240706171302_add_dispatch_content_table.down.sql  20240706171302_add_dispatch_content_table.up.sql  20240710004344_add_user_table.up.sql  20240710200023_add_permissions_table.down.sql  20240710200023_add_permissions_table.up.sql  20240710200032_add_user_permissions_table.down.sql  20240710200032_add_user_permissions_table.up.sql  20240711193711_rename_users_nation.down.sql  20240711193711_rename_users_nation.up.sql  20240807234242_api_keys.up.sql  20240808183507_add_nation_name_to_dispatches.down.sql  20240808183507_add_nation_name_to_dispatches.up.sql  20240925213027_dispatch_queue.down.sql  20240925213027_dispatch_queue.up.sql  20240926023147_dispatch_queue_id.down.sql  20240926023147_dispatch_queue_id.up.sql  20240926023743_dispatch_queue_error.down.sql  20240926023743_dispatch_queue_error.up.sql  20241018035141_dispatch_queue_modified_at.down.sql  20241018035141_dispatch_queue_modified_at.up.sql  20241213191851_rmbpost_queue.down.sql  20241213191851_rmbpost_queue.up.sql  20250111231433_rmbpost_queue_payload_split.down.sql  20250111231433_rmbpost_queue_payload_split.up.sql  20250111232149_use_timestamptz.down.sql  20250111232149_use_timestamptz.up.sql  20250112000952_drop_rmbpost_payload_col.down.sql  20250112000952_drop_rmbpost_payload_col.up.sql  20250112001437_change_updated_at_to_modified_at.down.sql  20250112001437_change_updated_at_to_modified_at.up.sql  20250506174753_user_permissions_unique_constraint.down.sql  20250506174753_user_permissions_unique_constraint.up.sql
src/: lib.rs  main.rs
src/controllers/: dispatch.rs  mod.rs  rmbpost.rs  telegram.rs  token.rs  user.rs
src/core/: client.rs  config.rs  error.rs  mod.rs  ns.rs  state.rs  store.rs  telegram.rs
src/ns/: dispatch.rs  mod.rs  nation.rs  rmbpost.rs  telegram.rs  types.rs
src/routes/: admin.rs  auth.rs  dispatch.rs  dispatches.rs  mod.rs  nations.rs  queue.rs  rmbpost.rs  router.rs  telegram.rs  telegrams.rs  user.rs
src/sync/: mod.rs  nations.rs  ratelimiter.rs
src/token/: store.rs
src/types/: mod.rs  ns.rs  request.rs  response.rs  user.rs
src/utils/: auth.rs  encode.rs  mod.rs  ratelimiter.rs
src/workers/: dispatch.rs  mod.rs  rmbpost.rs  telegram.rs
