[package]
name = "eurocore"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
axum-macros = "0.4.1"
bcrypt = "0.15.1"
chrono = "0.4.38"
config = { version = "0.14.0", features = ["toml"] }
jsonwebtoken = "9.3.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
serde_urlencoded = "0.7"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
quick-xml = { version = "0.36.0", features = ["serialize"] }

