[package]
name = "eurocore"
version = "0.6.1"
edition = "2021"

[dependencies]
axum = "0.7"
axum-macros = "0.4"
bcrypt = "0.15.1"
chrono = "0.4.38"
config = { version = "0.14", features = ["toml"] }
jsonwebtoken = "9.3"
thiserror = "1.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_urlencoded = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
quick-xml = { version = "0.36", features = ["serialize"] }

