[package]
name = "eurocore"
version = "0.10.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "eurocore"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5"
bcrypt = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15.4", features = ["toml"] }
htmlentity = "1.3.2"
jsonwebtoken = "9.3"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "sync", "tracing"] }
tower = { version = "0.5", features = ["buffer", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "validate-request"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_urlencoded = "0.7"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "migrate",
    "postgres",
    "chrono",
] }
quick-xml = { version = "0.37", features = ["serialize"] }
console-subscriber = "0.4.1"
